# oka

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  dependencies.py  main.py  ml_mutex.py  schemas.py
backend/app/chat/: chat_controller.py  chat_service.py  citation_service.py  keyword_utils.py  language_utils.py  prompt_builder.py  query_classifier.py  retrieval_filter.py  retrieval_query.py
backend/app/db/: models.py  session.py
backend/app/documents/: document_controller.py  document_formats.py  document_parser.py  document_repository.py  document_service.py  image_ocr.py  parsed_segment.py
backend/app/knowledge/: chunking_service.py  embedding_service.py  ingestion_service.py  qdrant_vector_repository.py  vector_models.py  vector_repository.py
backend/app/llm/: llm_client.py  mock_llm_client.py  ollama_client.py
backend/app/storage/: local_file_storage.py  storage_interface.py
backend/tests/: test_core.py
docker/: Dockerfile.backend  Dockerfile.frontend  init-ollama.sh  nginx.conf
docs/: RUNBOOK.md
docs/adr/: 0001-modular-monolith.md  0002-qdrant-for-vectors-only.md  0003-ollama-as-llm-runtime.md  0004-postgresql-for-relational-data.md  0005-local-embedding-model.md  0006-no-auth-for-mvp.md  0007-cpu-only-resource-budget.md  (+1 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
scripts/: start-backend.sh  start-infra.sh
(+12 files in other folders)
